--- a/index.html
+++ b/index.html
@@ -4,12 +4,27 @@
   <title>Viking Store</title>
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css">
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/reset.css">
+  <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-
-<div class="container">
   <div class="navbar">
+    <div>
+      <h1>Viking Store</h1>
+    </div>
+    <div id="cart-container">
+      <div>
+        <a href='#'>
+          <img id="cart" src="assets/images/shoppingCart.png">
+        </a>
+      </div>
+      <div class="strong">
+        <a href='#'>Your Cart</a>
+      </div>
+    </div>
+  
   </div>
+<div class="container">
+
 
 </div>
 
