style header below bkgrd image

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/reset.css">
   <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
 </head>
-<body>
+<body class=>
   <div class="navbar">
     <div>
-      <h1>Viking Store</h1>
+      <h1 class="shadow">Viking Store</h1>
     </div>
     <div id="cart-container">
       <div>
@@ -18,18 +18,21 @@
         </a>
       </div>
       <div class="strong">
-        <a href='#'>Your Cart</a>
+        <a href='#' class="shadow">Your Cart</a>
       </div>
     </div>
   
   </div>
 <div class="clear"></div>
 <div class="background-image">
- 
+
 </div>
 
 <div class="container">
+</div>
 
+<div class="lower-header">
+  <h2 class="shadow">The Best Viking Store on the Web</h2>
 
 </div>
 
