finish lower header

--- a/index.html
+++ b/index.html
@@ -32,10 +32,16 @@
 </div>
 
 <div class="lower-header">
-  <h2 class="shadow">The Best Viking Store on the Web</h2>
-
+  <h2 class="shadow">
+    The Best Viking Store on the Web
+  </h2>
 </div>
 
+<div class="line-up">
+  <h3>
+    Choose from our fine lineup up axes below
+  </h3>
+</div>
 
 
 </body>
