finish contact footer

--- a/index.html
+++ b/index.html
@@ -43,6 +43,41 @@
   </h3>
 </div>
 
+</div>
+
+<div class="footer-container">
+  <table>
+    
+    <th scope="col" colspan='2'>
+      Contact
+    </th>
+
+    <tr>
+      <td>
+          <a>
+            <img class="icon footer-icon" src="assets/images/phone.png">
+          </a>
+      </td>
+      <td>
+          <a href="#" class="td-text">1-888-000-0000</a>
+      </td>
+
+    <tr>
+      <td>
+          <a href="#">
+            <img class="icon footer-icon" src="assets/images/email.png">
+          </a>
+      </td>
+      <td> 
+          <a href="#" class="td-text">sales@vikingstore.com</a>
+      </td>
+    </tr>
+
+  </table>
+
+
+  
+</div>
 
 </body>
 </html>
