style inventory boxes

--- a/index.html
+++ b/index.html
@@ -45,6 +45,139 @@
 
 </div>
 
+<!--
+  Inventory
+-->
+
+<div class="container">
+
+  <!--first row-->
+
+  <!--ITEM 1-->
+  <div class="item-container col-1-3">
+    <div class="item-name">
+      The Silent Knight
+    </div>
+
+    <div class="item-image">
+    <div class="price">
+      $200
+    </div>
+        <img src="assets/images/silentNight.jpg">
+    </div>
+
+    <div class="btn-container">
+      <button class="btn-add" name="button">Add to Cart</button>
+    </div>
+  </div>
+  <!--ITEM 1 END-->
+
+  <!--ITEM 1-->
+  <div class="item-container col-1-3">
+    <div class="item-name">
+      The Silent Knight
+    </div>
+
+    <div class="item-image">
+    <div class="price">
+      $200
+    </div>
+        <img src="assets/images/silentNight.jpg">
+    </div>
+
+    <div class="btn-container">
+      <button class="btn-add" name="button">Add to Cart</button>
+    </div>
+  </div>
+  <!--ITEM 1 END-->
+    <!--ITEM 1-->
+  <div class="item-container col-1-3">
+    <div class="item-name">
+      The Silent Knight
+    </div>
+
+    <div class="item-image">
+    <div class="price">
+      $200
+    </div>
+        <img src="assets/images/silentNight.jpg">
+    </div>
+
+    <div class="btn-container">
+      <button class="btn-add" name="button">Add to Cart</button>
+    </div>
+  </div>
+  <!--ITEM 1 END-->
+
+</div>
+
+
+<div class="container">
+
+  <!--first row-->
+
+  <!--ITEM 1-->
+  <div class="item-container col-1-3">
+    <div class="item-name">
+      The Silent Knight
+    </div>
+
+    <div class="item-image">
+    <div class="price">
+      $200
+    </div>
+        <img src="assets/images/silentNight.jpg">
+    </div>
+
+    <div class="btn-container">
+      <button class="btn-add" name="button">Add to Cart</button>
+    </div>
+  </div>
+  <!--ITEM 1 END-->
+
+  <!--ITEM 1-->
+  <div class="item-container col-1-3">
+    <div class="item-name">
+      The Silent Knight
+    </div>
+
+    <div class="item-image">
+    <div class="price">
+      $200
+    </div>
+        <img src="assets/images/silentNight.jpg">
+    </div>
+
+    <div class="btn-container">
+      <button class="btn-add" name="button">Add to Cart</button>
+    </div>
+  </div>
+  <!--ITEM 1 END-->
+    <!--ITEM 1-->
+  <div class="item-container col-1-3">
+    <div class="item-name">
+      The Silent Knight
+    </div>
+
+    <div class="item-image">
+    <div class="price">
+      $200
+    </div>
+        <img src="assets/images/silentNight.jpg">
+    </div>
+
+    <div class="btn-container">
+      <button class="btn-add" name="button">Add to Cart</button>
+    </div>
+  </div>
+  <!--ITEM 1 END-->
+
+</div>
+
+<!--
+  footer
+-->
+
 <div class="footer-container">
   <table>
     
