tweak margin for inventory

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/reset.css">
   <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
 </head>
-<body class=>
+<body>
+<div class="wrapper">
   <div class="navbar">
     <div>
       <h1 class="shadow">Viking Store</h1>
@@ -49,7 +50,7 @@
   Inventory
 -->
 
-<div class="container">
+<div class="container inventory">
 
   <!--first row-->
 
@@ -112,7 +113,7 @@
 </div>
 
 
-<div class="container">
+<div class="container inventory">
 
   <!--first row-->
 
@@ -212,5 +213,6 @@
   
 </div>
 
+</div>
 </body>
 </html>
