center inventory containers

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
   Inventory
 -->
 
-<div class="container inventory">
+<div class="inventory-wrapper">
+
+<div class="container">
 
   <!--first row-->
 
@@ -113,7 +115,7 @@
 </div>
 
 
-<div class="container inventory">
+<div class="container">
 
   <!--first row-->
 
@@ -175,6 +177,7 @@
 
 </div>
 
+</div>
 <!--
   footer
 -->
