finish links bar

--- a/index.html
+++ b/index.html
@@ -178,6 +178,28 @@
 </div>
 
 </div>
+
+<!--
+  Page Navigation
+-->
+
+<div class="page-navigation-container">
+  <div id="page-bar">
+    <ul class="pages">
+      <li>&lt&ltPrevious</li>
+      <li>1</li>
+      <li><a href="#" class="underline">2</a></li>
+      <li><a href="#" class="underline">3</a></li>
+      <li><a href="#" class="underline">...</a></li>
+      <li><a href="#" class="underline">8</a></li>
+      <li><a href="#" class="underline">9</a></li>
+      <li><a href="#" class="underline">10</a></li>
+      <li><a href="#" class="underline">Next&gt&gt</a></li>
+    </ul>
+  </div>
+</div>
+
+
 <!--
   footer
 -->
