add shadow to headers

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
   <!--ITEM 1-->
   <div class="item-container col-1-3">
     <div class="item-name">
-      The Silent Knight
+      Silent Knight
     </div>
 
     <div class="item-image">
     <div class="price">
-      $200
+      $229
     </div>
         <img src="assets/images/silentNight.jpg">
     </div>
@@ -78,14 +78,14 @@
   <!--ITEM 1-->
   <div class="item-container col-1-3">
     <div class="item-name">
-      The Silent Knight
+      Cunning Cutter
     </div>
 
     <div class="item-image">
     <div class="price">
-      $200
+      $385
     </div>
-        <img src="assets/images/silentNight.jpg">
+        <img src="assets/images/cunningCutter.jpg">
     </div>
 
     <div class="btn-container">
@@ -96,14 +96,14 @@
     <!--ITEM 1-->
   <div class="item-container col-1-3">
     <div class="item-name">
-      The Silent Knight
+      Dainty Daisy
     </div>
 
     <div class="item-image">
     <div class="price">
-      $200
+      $125
     </div>
-        <img src="assets/images/silentNight.jpg">
+        <img src="assets/images/daintyDaisy.jpg">
     </div>
 
     <div class="btn-container">
@@ -122,14 +122,14 @@
   <!--ITEM 1-->
   <div class="item-container col-1-3">
     <div class="item-name">
-      The Silent Knight
+      Double Trouble
     </div>
 
     <div class="item-image">
     <div class="price">
-      $200
+      $185
     </div>
-        <img src="assets/images/silentNight.jpg">
+        <img src="assets/images/doubleTrouble.jpg">
     </div>
 
     <div class="btn-container">
@@ -141,14 +141,14 @@
   <!--ITEM 1-->
   <div class="item-container col-1-3">
     <div class="item-name">
-      The Silent Knight
+      Kingmaker
     </div>
 
     <div class="item-image">
     <div class="price">
-      $200
+      $350
     </div>
-        <img src="assets/images/silentNight.jpg">
+        <img src="assets/images/kingmaker.jpg">
     </div>
 
     <div class="btn-container">
@@ -159,14 +159,14 @@
     <!--ITEM 1-->
   <div class="item-container col-1-3">
     <div class="item-name">
-      The Silent Knight
+      Whispering Wind
     </div>
 
     <div class="item-image">
     <div class="price">
-      $200
+      $275
     </div>
-        <img src="assets/images/silentNight.jpg">
+        <img src="assets/images/whisperingWind.jpg">
     </div>
 
     <div class="btn-container">
