correct aspect ratio, add white bkgr

--- a/index.html
+++ b/index.html
@@ -65,8 +65,11 @@
     <div class="item-image">
     <div class="price">
       $229
+
     </div>
+        <div class="img-background">
         <img src="assets/images/silentNight.jpg">
+        </div>
     </div>
 
     <div class="btn-container">
@@ -85,7 +88,9 @@
     <div class="price">
       $385
     </div>
+        <div class="img-background">
         <img src="assets/images/cunningCutter.jpg">
+        </div>
     </div>
 
     <div class="btn-container">
@@ -103,7 +108,9 @@
     <div class="price">
       $125
     </div>
+        <div class="img-background">
         <img src="assets/images/daintyDaisy.jpg">
+        </div>
     </div>
 
     <div class="btn-container">
@@ -129,7 +136,9 @@
     <div class="price">
       $185
     </div>
+        <div class="img-background">
         <img src="assets/images/doubleTrouble.jpg">
+        </div>
     </div>
 
     <div class="btn-container">
@@ -148,7 +157,9 @@
     <div class="price">
       $350
     </div>
+        <div class="img-background">
         <img src="assets/images/kingmaker.jpg">
+        </div>
     </div>
 
     <div class="btn-container">
@@ -166,7 +177,9 @@
     <div class="price">
       $275
     </div>
+        <div class="img-background">
         <img src="assets/images/whisperingWind.jpg">
+        </div>
     </div>
 
     <div class="btn-container">
